; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_codec_desc.c_avcodec_descriptor_next.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_codec_desc.c_avcodec_descriptor_next.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@codec_descriptors = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @avcodec_descriptor_next(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = icmp ne i32* %4, null
  br i1 %5, label %9, label %6

6:                                                ; preds = %1
  %7 = load i32*, i32** @codec_descriptors, align 8
  %8 = getelementptr inbounds i32, i32* %7, i64 0
  store i32* %8, i32** %2, align 8
  br label %25

9:                                                ; preds = %1
  %10 = load i32*, i32** %3, align 8
  %11 = load i32*, i32** @codec_descriptors, align 8
  %12 = ptrtoint i32* %10 to i64
  %13 = ptrtoint i32* %11 to i64
  %14 = sub i64 %12, %13
  %15 = sdiv exact i64 %14, 4
  %16 = load i32*, i32** @codec_descriptors, align 8
  %17 = call i32 @FF_ARRAY_ELEMS(i32* %16)
  %18 = sub nsw i32 %17, 1
  %19 = sext i32 %18 to i64
  %20 = icmp slt i64 %15, %19
  br i1 %20, label %21, label %24

21:                                               ; preds = %9
  %22 = load i32*, i32** %3, align 8
  %23 = getelementptr inbounds i32, i32* %22, i64 1
  store i32* %23, i32** %2, align 8
  br label %25

24:                                               ; preds = %9
  store i32* null, i32** %2, align 8
  br label %25

25:                                               ; preds = %24, %21, %6
  %26 = load i32*, i32** %2, align 8
  ret i32* %26
}

declare dso_local i32 @FF_ARRAY_ELEMS(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
